fixed vertical centering on mobile

--- a/static/css/zen.css
+++ b/static/css/zen.css
@@ -6,14 +6,10 @@ body{
 }
 
 #quote-div{
-	top: 35%;
-	position: absolute;
+	top: 25vh;
+	position: relative;
 }
 
 #quote-author{
 	padding-left: 2em;
-}
-
-#quote-button{
-
 }
